docs/api/qiskit/0.19/qiskit.pulse.ShiftPhase.mdx
---
title: ShiftPhase
description: API reference for qiskit.pulse.ShiftPhase
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.ShiftPhase
---

# ShiftPhase

<Class id="qiskit.pulse.ShiftPhase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/instructions/phase.py" signature="ShiftPhase(phase, channel=None, name=None)" modifiers="class">
  The shift phase instruction updates the modulation phase of proceeding pulses played on the same [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel"). It is a relative increase in phase determined by the `phase` operand.

  In particular, a PulseChannel creates pulses of the form

$$
Re[\exp(i 2\pi f jdt + \phi) d_j].
$$

  The `ShiftPhase` instruction causes $\phi$ to be increased by the instruction’s `phase` operand. This will affect all pulses following on the same channel.

  The qubit phase is tracked in software, enabling instantaneous, nearly error-free Z-rotations by using a ShiftPhase to update the frame tracking the qubit state.

  Instantiate a shift phase instruction, increasing the output signal phase on `channel` by `phase` \[radians].

  **Parameters**

  *   **phase** (`complex`) – The rotation angle in radians.
  *   **channel** (`Optional`\[[`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")]) – The channel this instruction operates on.
  *   **name** (`Optional`\[`str`]) – Display name for this instruction.

  ## Attributes

  <span id="shiftphase-channel" />

  ### channel

  <Attribute id="qiskit.pulse.ShiftPhase.channel" attributeTypeHint="qiskit.pulse.channels.PulseChannel">
    Return the [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on.

    **Return type**

    [`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")
  </Attribute>

  <span id="shiftphase-channels" />

  ### channels

  <Attribute id="qiskit.pulse.ShiftPhase.channels" attributeTypeHint="Tuple[qiskit.pulse.channels.Channel]">
    Returns channels that this schedule uses.

    **Return type**

    `Tuple`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]
  </Attribute>

  <span id="shiftphase-command" />

  ### command

  <Attribute id="qiskit.pulse.ShiftPhase.command" attributeTypeHint="qiskit.pulse.commands.command.Command">
    The associated command. Commands are deprecated, so this method will be deprecated shortly.

    **Return type**

    `Command`
  </Attribute>

  <span id="shiftphase-duration" />

  ### duration

  <Attribute id="qiskit.pulse.ShiftPhase.duration" attributeTypeHint="int">
    Duration of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="shiftphase-id" />

  ### id

  <Attribute id="qiskit.pulse.ShiftPhase.id" attributeTypeHint="int">
    Unique identifier for this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="shiftphase-instructions" />

  ### instructions

  <Attribute id="qiskit.pulse.ShiftPhase.instructions" attributeTypeHint="Tuple[Tuple[int, qiskit.pulse.instructions.instruction.Instruction]]">
    Iterable for getting instructions from Schedule tree.

    **Return type**

    `Tuple`\[`Tuple`\[`int`, [`Instruction`](qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")]]
  </Attribute>

  <span id="shiftphase-name" />

  ### name

  <Attribute id="qiskit.pulse.ShiftPhase.name" attributeTypeHint="str">
    Name of this instruction.

    **Return type**

    `str`
  </Attribute>

  <span id="shiftphase-operands" />

  ### operands

  <Attribute id="qiskit.pulse.ShiftPhase.operands" attributeTypeHint="Tuple">
    Return instruction operands.

    **Return type**

    `Tuple`
  </Attribute>

  <span id="shiftphase-phase" />

  ### phase

  <Attribute id="qiskit.pulse.ShiftPhase.phase" attributeTypeHint="float">
    Return the rotation angle enacted by this instruction in radians.

    **Return type**

    `float`
  </Attribute>

  <span id="shiftphase-start-time" />

  ### start\_time

  <Attribute id="qiskit.pulse.ShiftPhase.start_time" attributeTypeHint="int">
    Relative begin time of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="shiftphase-stop-time" />

  ### stop\_time

  <Attribute id="qiskit.pulse.ShiftPhase.stop_time" attributeTypeHint="int">
    Relative end time of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="shiftphase-timeslots" />

  ### timeslots

  <Attribute id="qiskit.pulse.ShiftPhase.timeslots" attributeTypeHint="Dict[qiskit.pulse.channels.Channel, List[Tuple[int, int]]]">
    Occupied time slots by this instruction.

    **Return type**

    `Dict`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel"), `List`\[`Tuple`\[`int`, `int`]]]
  </Attribute>

  ## Methods

  <span id="shiftphase-call" />

  ### \_\_call\_\_

  <Function id="qiskit.pulse.ShiftPhase.__call__" signature="ShiftPhase.__call__(channel)">
    Return a new ShiftPhase instruction supporting the deprecated syntax of FrameChange.

    **Parameters**

    **channel** ([`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")) – The channel this instruction operates on.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If channel was already added.

    **Return type**

    [`ShiftPhase`](qiskit.pulse.instructions.ShiftPhase "qiskit.pulse.instructions.phase.ShiftPhase")

    **Returns**

    New ShiftPhase with both phase (from ```self`) and the ``channel``` provided.
  </Function>

  <span id="shiftphase-append" />

  ### append

  <Function id="qiskit.pulse.ShiftPhase.append" signature="ShiftPhase.append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (`ScheduleComponent`) – schedule to be appended
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="shiftphase-ch-duration" />

  ### ch\_duration

  <Function id="qiskit.pulse.ShiftPhase.ch_duration" signature="ShiftPhase.ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="shiftphase-ch-start-time" />

  ### ch\_start\_time

  <Function id="qiskit.pulse.ShiftPhase.ch_start_time" signature="ShiftPhase.ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="shiftphase-ch-stop-time" />

  ### ch\_stop\_time

  <Function id="qiskit.pulse.ShiftPhase.ch_stop_time" signature="ShiftPhase.ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="shiftphase-draw" />

  ### draw

  <Function id="qiskit.pulse.ShiftPhase.draw" signature="ShiftPhase.draw(dt=1, style=None, filename=None, interp_method=None, scale=1, channels_to_plot=None, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, scaling=None, channels=None)">
    Plot the instruction.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples
    *   **style** (*Optional\[*[*SchedStyle*](qiskit.visualization.pulse.qcstyle#qiskit.visualization.pulse.qcstyle.SchedStyle "qiskit.visualization.pulse.qcstyle.SchedStyle")*]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **channels\_to\_plot** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – Deprecated, see channels
    *   **plot\_all** (`bool`) – Plot empty channels
    *   **plot\_range** (`Optional`\[`Tuple`\[`float`]]) – A tuple of time range to plot
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** (`bool`) – Draw event table for supported instructions
    *   **label** (`bool`) – Label individual instructions
    *   **framechange** (`bool`) – Add framechange indicators
    *   **scaling** (`Optional`\[`float`]) – Deprecated, see scale
    *   **channels** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  <span id="shiftphase-flatten" />

  ### flatten

  <Function id="qiskit.pulse.ShiftPhase.flatten" signature="ShiftPhase.flatten()">
    Return itself as already single instruction.

    **Return type**

    [`Instruction`](qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")
  </Function>

  <span id="shiftphase-insert" />

  ### insert

  <Function id="qiskit.pulse.ShiftPhase.insert" signature="ShiftPhase.insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** (`int`) – Time to insert the schedule schedule
    *   **schedule** (`ScheduleComponent`) – Schedule to insert
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="shiftphase-shift" />

  ### shift

  <Function id="qiskit.pulse.ShiftPhase.shift" signature="ShiftPhase.shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** (`int`) – Time to shift by
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="shiftphase-union" />

  ### union

  <Function id="qiskit.pulse.ShiftPhase.union" signature="ShiftPhase.union(*schedules, name=None)">
    Return a new schedule which is the union of self and schedule.

    **Parameters**

    *   **\*schedules** – Schedules to be take the union with this Instruction.
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>
</Class>

