docs/api/qiskit/0.24/qiskit.pulse.ShiftPhase.mdx
---
title: ShiftPhase
description: API reference for qiskit.pulse.ShiftPhase
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.ShiftPhase
---

<span id="qiskit-pulse-shiftphase" />

# qiskit.pulse.ShiftPhase

<Class id="qiskit.pulse.ShiftPhase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/pulse/instructions/phase.py" signature="ShiftPhase(phase, channel, name=None)">
  The shift phase instruction updates the modulation phase of proceeding pulses played on the same [`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel"). It is a relative increase in phase determined by the `phase` operand.

  In particular, a PulseChannel creates pulses of the form

$$
Re[\exp(i 2\pi f jdt + \phi) d_j].
$$

  The `ShiftPhase` instruction causes $\phi$ to be increased by the instruction’s `phase` operand. This will affect all pulses following on the same channel.

  The qubit phase is tracked in software, enabling instantaneous, nearly error-free Z-rotations by using a ShiftPhase to update the frame tracking the qubit state.

  Instantiate a shift phase instruction, increasing the output signal phase on `channel` by `phase` \[radians].

  **Parameters**

  *   **phase** (`Union`\[`complex`, `ParameterExpression`]) – The rotation angle in radians.
  *   **channel** ([`PulseChannel`](qiskit.pulse.channels#pulsechannel "qiskit.pulse.channels.PulseChannel")) – The channel this instruction operates on.
  *   **name** (`Optional`\[`str`]) – Display name for this instruction.

  ### \_\_init\_\_

  <Function id="qiskit.pulse.ShiftPhase.__init__" name="__init__" signature="__init__(phase, channel, name=None)">
    Instantiate a shift phase instruction, increasing the output signal phase on `channel` by `phase` \[radians].

    **Parameters**

    *   **phase** (`Union`\[`complex`, `ParameterExpression`]) – The rotation angle in radians.
    *   **channel** ([`PulseChannel`](qiskit.pulse.channels#pulsechannel "qiskit.pulse.channels.PulseChannel")) – The channel this instruction operates on.
    *   **name** (`Optional`\[`str`]) – Display name for this instruction.
  </Function>

  ## Methods

  |                                                                                                                            |                                                                                                                                                                               |
  | -------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.pulse.ShiftPhase.__init__ "qiskit.pulse.ShiftPhase.__init__")(phase, channel\[, name])                | Instantiate a shift phase instruction, increasing the output signal phase on `channel` by `phase` \[radians].                                                                 |
  | [`append`](#qiskit.pulse.ShiftPhase.append "qiskit.pulse.ShiftPhase.append")(schedule\[, name])                            | Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`. |
  | [`assign_parameters`](#qiskit.pulse.ShiftPhase.assign_parameters "qiskit.pulse.ShiftPhase.assign_parameters")(value\_dict) | Modify and return self with parameters assigned according to the input.                                                                                                       |
  | [`ch_duration`](#qiskit.pulse.ShiftPhase.ch_duration "qiskit.pulse.ShiftPhase.ch_duration")(\*channels)                    | Return duration of the supplied channels in this Instruction.                                                                                                                 |
  | [`ch_start_time`](#qiskit.pulse.ShiftPhase.ch_start_time "qiskit.pulse.ShiftPhase.ch_start_time")(\*channels)              | Return minimum start time for supplied channels.                                                                                                                              |
  | [`ch_stop_time`](#qiskit.pulse.ShiftPhase.ch_stop_time "qiskit.pulse.ShiftPhase.ch_stop_time")(\*channels)                 | Return maximum start time for supplied channels.                                                                                                                              |
  | [`draw`](#qiskit.pulse.ShiftPhase.draw "qiskit.pulse.ShiftPhase.draw")(\[dt, style, filename, interp\_method, …])          | Plot the instruction.                                                                                                                                                         |
  | [`flatten`](#qiskit.pulse.ShiftPhase.flatten "qiskit.pulse.ShiftPhase.flatten")()                                          | Return itself as already single instruction.                                                                                                                                  |
  | [`insert`](#qiskit.pulse.ShiftPhase.insert "qiskit.pulse.ShiftPhase.insert")(start\_time, schedule\[, name])               | Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.                                              |
  | [`shift`](#qiskit.pulse.ShiftPhase.shift "qiskit.pulse.ShiftPhase.shift")(time\[, name])                                   | Return a new schedule shifted forward by time.                                                                                                                                |

  ## Attributes

  |                                                                                                |                                                                                                                              |
  | ---------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
  | [`channel`](#qiskit.pulse.ShiftPhase.channel "qiskit.pulse.ShiftPhase.channel")                | Return the [`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on. |
  | [`channels`](#qiskit.pulse.ShiftPhase.channels "qiskit.pulse.ShiftPhase.channels")             | Returns channels that this schedule uses.                                                                                    |
  | [`command`](#qiskit.pulse.ShiftPhase.command "qiskit.pulse.ShiftPhase.command")                | The associated command.                                                                                                      |
  | [`duration`](#qiskit.pulse.ShiftPhase.duration "qiskit.pulse.ShiftPhase.duration")             | Duration of this instruction.                                                                                                |
  | [`id`](#qiskit.pulse.ShiftPhase.id "qiskit.pulse.ShiftPhase.id")                               | Unique identifier for this instruction.                                                                                      |
  | [`instructions`](#qiskit.pulse.ShiftPhase.instructions "qiskit.pulse.ShiftPhase.instructions") | Iterable for getting instructions from Schedule tree.                                                                        |
  | [`name`](#qiskit.pulse.ShiftPhase.name "qiskit.pulse.ShiftPhase.name")                         | Name of this instruction.                                                                                                    |
  | [`operands`](#qiskit.pulse.ShiftPhase.operands "qiskit.pulse.ShiftPhase.operands")             | Return instruction operands.                                                                                                 |
  | [`phase`](#qiskit.pulse.ShiftPhase.phase "qiskit.pulse.ShiftPhase.phase")                      | Return the rotation angle enacted by this instruction in radians.                                                            |
  | [`start_time`](#qiskit.pulse.ShiftPhase.start_time "qiskit.pulse.ShiftPhase.start_time")       | Relative begin time of this instruction.                                                                                     |
  | [`stop_time`](#qiskit.pulse.ShiftPhase.stop_time "qiskit.pulse.ShiftPhase.stop_time")          | Relative end time of this instruction.                                                                                       |
  | [`timeslots`](#qiskit.pulse.ShiftPhase.timeslots "qiskit.pulse.ShiftPhase.timeslots")          | Occupied time slots by this instruction.                                                                                     |

  ### append

  <Function id="qiskit.pulse.ShiftPhase.append" name="append" signature="append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (`ScheduleComponent`) – schedule to be appended
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    `Schedule`
  </Function>

  ### assign\_parameters

  <Function id="qiskit.pulse.ShiftPhase.assign_parameters" name="assign_parameters" signature="assign_parameters(value_dict)">
    Modify and return self with parameters assigned according to the input.

    **Parameters**

    **value\_dict** (`Dict`\[`ParameterExpression`, `Union`\[`ParameterExpression`, `float`, `int`]]) – A mapping from Parameters to either numeric values or another Parameter expression.

    **Return type**

    `Instruction`

    **Returns**

    Self with updated parameters.
  </Function>

  ### ch\_duration

  <Function id="qiskit.pulse.ShiftPhase.ch_duration" name="ch_duration" signature="ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### ch\_start\_time

  <Function id="qiskit.pulse.ShiftPhase.ch_start_time" name="ch_start_time" signature="ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### ch\_stop\_time

  <Function id="qiskit.pulse.ShiftPhase.ch_stop_time" name="ch_stop_time" signature="ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### channel

  <Function id="qiskit.pulse.ShiftPhase.channel" name="channel" signature="property channel">
    Return the [`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on.

    **Return type**

    [`PulseChannel`](qiskit.pulse.channels#pulsechannel "qiskit.pulse.channels.PulseChannel")
  </Function>

  ### channels

  <Function id="qiskit.pulse.ShiftPhase.channels" name="channels" signature="property channels">
    Returns channels that this schedule uses.

    **Return type**

    `Tuple`\[[`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel")]
  </Function>

  ### command

  <Function id="qiskit.pulse.ShiftPhase.command" name="command" signature="property command">
    The associated command. Commands are deprecated, so this method will be deprecated shortly.

    **Returns**

    The deprecated command if available.

    **Return type**

    [Command](qiskit.providers.models.Command "qiskit.providers.models.Command")
  </Function>

  ### draw

  <Function id="qiskit.pulse.ShiftPhase.draw" name="draw" signature="draw(dt=1, style=None, filename=None, interp_method=None, scale=1, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, channels=None)">
    Plot the instruction.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples
    *   **style** (*Optional\[*[*SchedStyle*](qiskit.visualization.pulse.qcstyle#schedstyle "qiskit.visualization.pulse.qcstyle.SchedStyle")*]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **plot\_all** (`bool`) – Plot empty channels
    *   **plot\_range** (`Optional`\[`Tuple`\[`float`]]) – A tuple of time range to plot
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** (`bool`) – Draw event table for supported instructions
    *   **label** (`bool`) – Label individual instructions
    *   **framechange** (`bool`) – Add framechange indicators
    *   **channels** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel")]]) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  ### duration

  <Function id="qiskit.pulse.ShiftPhase.duration" name="duration" signature="property duration">
    Duration of this instruction.

    **Return type**

    `int`
  </Function>

  ### flatten

  <Function id="qiskit.pulse.ShiftPhase.flatten" name="flatten" signature="flatten()">
    Return itself as already single instruction.

    **Return type**

    `Instruction`
  </Function>

  ### id

  <Function id="qiskit.pulse.ShiftPhase.id" name="id" signature="property id">
    Unique identifier for this instruction.

    **Return type**

    `int`
  </Function>

  ### insert

  <Function id="qiskit.pulse.ShiftPhase.insert" name="insert" signature="insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** (`int`) – Time to insert the schedule schedule
    *   **schedule** (`ScheduleComponent`) – Schedule to insert
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    `Schedule`
  </Function>

  ### instructions

  <Function id="qiskit.pulse.ShiftPhase.instructions" name="instructions" signature="property instructions">
    Iterable for getting instructions from Schedule tree.

    **Return type**

    `Tuple`\[`Tuple`\[`int`, `Instruction`]]
  </Function>

  ### name

  <Function id="qiskit.pulse.ShiftPhase.name" name="name" signature="property name">
    Name of this instruction.

    **Return type**

    `str`
  </Function>

  ### operands

  <Function id="qiskit.pulse.ShiftPhase.operands" name="operands" signature="property operands">
    Return instruction operands.

    **Return type**

    `Tuple`
  </Function>

  ### phase

  <Function id="qiskit.pulse.ShiftPhase.phase" name="phase" signature="property phase">
    Return the rotation angle enacted by this instruction in radians.

    **Return type**

    `Union`\[`complex`, `ParameterExpression`]
  </Function>

  ### shift

  <Function id="qiskit.pulse.ShiftPhase.shift" name="shift" signature="shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** (`int`) – Time to shift by
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    `Schedule`
  </Function>

  ### start\_time

  <Function id="qiskit.pulse.ShiftPhase.start_time" name="start_time" signature="property start_time">
    Relative begin time of this instruction.

    **Return type**

    `int`
  </Function>

  ### stop\_time

  <Function id="qiskit.pulse.ShiftPhase.stop_time" name="stop_time" signature="property stop_time">
    Relative end time of this instruction.

    **Return type**

    `int`
  </Function>

  ### timeslots

  <Function id="qiskit.pulse.ShiftPhase.timeslots" name="timeslots" signature="property timeslots">
    Occupied time slots by this instruction.

    **Return type**

    `Dict`\[[`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel"), `List`\[`Tuple`\[`int`, `int`]]]
  </Function>
</Class>

